--- a/style.css
+++ b/style.css
@@ -185,6 +185,16 @@ a:hover {
     border: 1px solid #bbb;
     cursor: pointer;
 }
+
+.ad-banner p {
+    margin: 0px 0;
+}
+
+.ad-banner strong {
+    font-size: 10px;
+    margin-top: 2px;
+}
+
 .bbs-list {
     list-style: none;
     padding: 0;
